// Vitest Snapshot v1

exports[`Transfer > Transfer baseVue demo works fine 1`] = `
<div>
  <t-transfer
    checked="2"
    data="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  />
</div>
`;

exports[`Transfer > Transfer checkedVue demo works fine 1`] = `
<div>
  <t-transfer
    checked="0,2,4,6,8,10,12,14,16,18"
    data="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  />
</div>
`;

exports[`Transfer > Transfer customVue demo works fine 1`] = `
<div>
  <p
    style="margin: 10px;"
  >
    自定义头部、底部及操作按钮的渲染
  </p>
  <t-transfer
    data="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  />
  <br />
  <p
    style="margin: 10px;"
  >
    自定义渲染数据
  </p>
  <t-transfer
    checked-value=""
    data="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    theme="primary"
    transfer-item="function () { [native code] }"
  />
</div>
`;

exports[`Transfer > Transfer disabledVue demo works fine 1`] = `
<div>
  <t-transfer
    data="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    default-value="0,2,4,6,8,10,12,14,16,18"
    disabled="false,true"
  />
</div>
`;

exports[`Transfer > Transfer emptyVue demo works fine 1`] = `
<div>
  <p
    style="margin: 10px 0px;"
  >
    默认暂无数据
  </p>
  <t-transfer
    data=""
  />
  <p
    style="margin: 10px;"
  >
    自定义空状态
  </p>
  <t-transfer
    data=""
    empty="No Data"
  />
</div>
`;

exports[`Transfer > Transfer paginationVue demo works fine 1`] = `
<div>
  <t-transfer
    checked-value=""
    data="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    onpagechange="function () { [native code] }"
    pagination="[object Object],[object Object]"
    theme="primary"
  />
</div>
`;

exports[`Transfer > Transfer searchVue demo works fine 1`] = `
<div>
  <t-transfer
    checked-value=""
    data="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    search="true"
    theme="primary"
  />
</div>
`;

exports[`Transfer > Transfer targetValueVue demo works fine 1`] = `
<div>
  <t-transfer
    data="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  />
</div>
`;

exports[`Transfer > Transfer treeVue demo works fine 1`] = `
<div>
  <t-transfer
    checked=""
    data="[object Object],[object Object]"
  />
</div>
`;
